[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprite/entity_sprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://map/goal_spot.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="goal_spot" type="Node2D"]
script = ExtResource( 2 )

[node name="goal_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal_area"]
shape = SubResource( 2 )

[node name="kill_zone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_zone"]
shape = SubResource( 4 )

[node name="sprite_full" parent="." instance=ExtResource( 1 )]
visible = false
z_index = 2
frame = 32

[connection signal="area_entered" from="goal_area" to="." method="_on_goal_zone_area_entered"]
